refactor(live): move playback flow into controller